@@ -37,10 +37,9 @@ monster_hp_rate: 100
 monster_max_aspd: 199
 
 // Defines various mob AI related settings. The mask bits are (add to include multiple settings)
-// 1: If disabled, mobs use Aegis-type path searching, that is, they only move on straight
-//    lines, and will only change their destination tile after arriving to the previous one.
-//    When enabled mobs use more dynamic and complex path searching to chase a player 
-//    (they still must be within line of sight to start chasing)
+// 1: When enabled mobs will update their target cell every few iterations
+//    (normally they never update their target cell until they reach it while
+//    chasing)
 // 2: Makes mob use their "rude attack" skill (usually warping away) if they are attacked and they
 //    can't attack back regardless of how they were attacked (eg: GrimTooth), otherwise, their 
 //    rude attack" is only activated if they can't melee reach the target (eg: sniping)
@@ -68,12 +67,14 @@ monster_ai: 0
 mob_warp: 0
 
 // Mobs and Pets view-range adjustment (range2 column in the mob_db) (Note 2)
-view_range_rate: 100
+// NOTE: 100 is not used by default since in Aegis the view range is 21x21
+// (square with half side of 10) while eAthena uses circular areas with radio 10
+view_range_rate: 120
 
 // Chase Range is the base minimum-chase that a mob gives before giving up
 // (as long as the target is outside their field of view). This is the range3
 // column in the mob_db. (Note 2)
-chase_range_rate: 100
+chase_range_rate: 120
 
 // Allow monsters to be aggresive and attack first? (Note 1)
 monster_active_enable: yes
